{
  "version": 4,
  "terraform_version": "1.16.4",
  "serial": 34,
  "lineage": "cab8843a-641f-015b-41ee-aeedc9c9dd8a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:102152672912:internet-gateway/igw-0471a2449e536dcbc",
            "id": "igw-0471a2449e536dcbc",
            "owner_id": "102152672912",
            "region": "eu-west-3",
            "tags": {
              "Name": "gestion-employe-igw"
            },
            "tags_all": {
              "Name": "gestion-employe-igw"
            },
            "vpc_id": "vpc-0bcd5fdbea1b25d57"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "102152672912",
            "id": "igw-0471a2449e536dcbc",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:loadbalancer/app/gestion-employe-alb/8c129b2db11857ea",
            "arn_suffix": "app/gestion-employe-alb/8c129b2db11857ea",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "gestion-employe-alb-1644524292.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:loadbalancer/app/gestion-employe-alb/8c129b2db11857ea",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "gestion-employe-alb",
            "preserve_host_header": false,
            "region": "eu-west-3",
            "security_groups": [
              "sg-061a46ee967d976c1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e10474ca7452db8c"
              },
              {
                "subnet_id": "subnet-0fb622db63ba0b154"
              }
            ],
            "subnets": [
              "subnet-0e10474ca7452db8c",
              "subnet-0fb622db63ba0b154"
            ],
            "tags": {
              "Name": "gestion-employe-alb"
            },
            "tags_all": {
              "Name": "gestion-employe-alb"
            },
            "vpc_id": "vpc-0bcd5fdbea1b25d57",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:loadbalancer/app/gestion-employe-alb/8c129b2db11857ea"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:listener/app/gestion-employe-alb/8c129b2db11857ea/84f8b2f798585e74",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:targetgroup/gestion-employe-frontend-tg/59cd96f014d2743f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:listener/app/gestion-employe-alb/8c129b2db11857ea/84f8b2f798585e74",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:loadbalancer/app/gestion-employe-alb/8c129b2db11857ea",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-3",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:listener/app/gestion-employe-alb/8c129b2db11857ea/84f8b2f798585e74"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:targetgroup/gestion-employe-backend-tg/ace92792f0984300",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:listener-rule/app/gestion-employe-alb/8c129b2db11857ea/84f8b2f798585e74/fb6c36cf4f23c131",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:listener-rule/app/gestion-employe-alb/8c129b2db11857ea/84f8b2f798585e74/fb6c36cf4f23c131",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:listener/app/gestion-employe-alb/8c129b2db11857ea/84f8b2f798585e74",
            "priority": 100,
            "region": "eu-west-3",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:listener-rule/app/gestion-employe-alb/8c129b2db11857ea/84f8b2f798585e74/fb6c36cf4f23c131"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.http",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:targetgroup/gestion-employe-backend-tg/ace92792f0984300",
            "arn_suffix": "targetgroup/gestion-employe-backend-tg/ace92792f0984300",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:targetgroup/gestion-employe-backend-tg/ace92792f0984300",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "gestion-employe-backend-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-3",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bcd5fdbea1b25d57"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:targetgroup/gestion-employe-backend-tg/ace92792f0984300"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:targetgroup/gestion-employe-frontend-tg/59cd96f014d2743f",
            "arn_suffix": "targetgroup/gestion-employe-frontend-tg/59cd96f014d2743f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:targetgroup/gestion-employe-frontend-tg/59cd96f014d2743f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "gestion-employe-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-3",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bcd5fdbea1b25d57"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:102152672912:targetgroup/gestion-employe-frontend-tg/59cd96f014d2743f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:102152672912:route-table/rtb-056923724effcc6a3",
            "id": "rtb-056923724effcc6a3",
            "owner_id": "102152672912",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0471a2449e536dcbc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gestion-employe-public-rt"
            },
            "tags_all": {
              "Name": "gestion-employe-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcd5fdbea1b25d57"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "102152672912",
            "id": "rtb-056923724effcc6a3",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ba38e7edf777358",
            "region": "eu-west-3",
            "route_table_id": "rtb-056923724effcc6a3",
            "subnet_id": "subnet-0fb622db63ba0b154"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "102152672912",
            "id": "rtbassoc-00ba38e7edf777358",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073a8d43787109c7c",
            "region": "eu-west-3",
            "route_table_id": "rtb-056923724effcc6a3",
            "subnet_id": "subnet-0e10474ca7452db8c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "102152672912",
            "id": "rtbassoc-073a8d43787109c7c",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:102152672912:security-group/sg-061a46ee967d976c1",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061a46ee967d976c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gestion-employe-alb-sg",
            "name_prefix": "",
            "owner_id": "102152672912",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gestion-employe-alb-sg"
            },
            "tags_all": {
              "Name": "gestion-employe-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcd5fdbea1b25d57"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "102152672912",
            "id": "sg-061a46ee967d976c1",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:102152672912:security-group/sg-0b254b51511b00732",
            "description": "Security group for backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b254b51511b00732",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Backend API from ALB",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-061a46ee967d976c1"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "gestion-employe-backend-sg",
            "name_prefix": "",
            "owner_id": "102152672912",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gestion-employe-backend-sg"
            },
            "tags_all": {
              "Name": "gestion-employe-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcd5fdbea1b25d57"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "102152672912",
            "id": "sg-0b254b51511b00732",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:102152672912:security-group/sg-0f83c2872cefb36dc",
            "description": "Security group for frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f83c2872cefb36dc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-061a46ee967d976c1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gestion-employe-frontend-sg",
            "name_prefix": "",
            "owner_id": "102152672912",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gestion-employe-frontend-sg"
            },
            "tags_all": {
              "Name": "gestion-employe-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcd5fdbea1b25d57"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "102152672912",
            "id": "sg-0f83c2872cefb36dc",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:102152672912:subnet/subnet-0fb622db63ba0b154",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb622db63ba0b154",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "102152672912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "gestion-employe-public-1"
            },
            "tags_all": {
              "Name": "gestion-employe-public-1"
            },
            "vpc_id": "vpc-0bcd5fdbea1b25d57"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "102152672912",
            "id": "subnet-0fb622db63ba0b154",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:102152672912:subnet/subnet-0e10474ca7452db8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e10474ca7452db8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "102152672912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "gestion-employe-public-2"
            },
            "tags_all": {
              "Name": "gestion-employe-public-2"
            },
            "vpc_id": "vpc-0bcd5fdbea1b25d57"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "102152672912",
            "id": "subnet-0e10474ca7452db8c",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:102152672912:vpc/vpc-0bcd5fdbea1b25d57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05d32e5421c606486",
            "default_route_table_id": "rtb-03db7594b0d3e7da5",
            "default_security_group_id": "sg-022c2a9c060eb290c",
            "dhcp_options_id": "dopt-010cb52e67fb93289",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bcd5fdbea1b25d57",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03db7594b0d3e7da5",
            "owner_id": "102152672912",
            "region": "eu-west-3",
            "tags": {
              "Name": "gestion-employe-vpc"
            },
            "tags_all": {
              "Name": "gestion-employe-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "102152672912",
            "id": "vpc-0bcd5fdbea1b25d57",
            "region": "eu-west-3"
          }
        }
      ]
    }
  ]
}